<resources>
    <string name="app_name">Albert</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esq_senha">Esqueci a senha</string>
    <string name="sem_conta">Criar conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="nivel_escola">Nivel de escolaridade </string>
    <string name="materias">Matérias</string>
    <string name="email">Email</string>
    <string name="doacao">Doação feita com sucesso</string>
    <string name="novo_projeto">Criar projeto</string>
    <string name="objetivo">Objetivo</string>
    <string name="salvar">Salvar</string>
    <string name="projeto_alt">Projeto alterado com sucesso</string>
    <string name="projeto_sal">Projeto salvo com sucesso</string>
    <string name="conta_criada">Conta criada com sucesso</string>
    <string name="campos">Preencha todos os campos</string>
    <string name="email_invalido">Formato do email inválido</string>
    <string name="senha_invalida">A senha deve ter no mínimo 6 caracteres</string>
    <string name="internet">Sem conexão com internet</string>
    <string name="andamento">Em andamento</string>
    <string name="linklogin">Enviar link para o email</string>
    <string name="linkenviado">Link enviado para o email</string>
    <string name="errolinkenviado">Erro ao enviar o link para o email</string>
    <string name="projetoexcluido">Projeto excluído com sucesso</string>
    <string name="usuariodesconectado">Usuário desconectado</string>
    <string name="nomeprojeto">Nome do projeto</string>
    <string name="numagencia">Número da agência</string>
    <string name="zero">Digite um valor válido</string>
    <string name="nenhumaselecionada">Nenhuma imagem selecionada</string>
    <string name="contribuir">Contribuir</string>
    <string name="valor">Valor</string>
    <string name="doar">Doar</string>
    <string name="obstransf">*Doações feitas mediantes transferência\nbancárias</string>
    <string name="linguaportuguesa">Língua Portuguesa</string>
    <string name="matematica">Matemática</string>
    <string name="artes">Artes</string>
    <string name="historia">História</string>
    <string name="filosofia">Filosofia</string>
    <string name="geografia">Geografia</string>
    <string name="quimica">Química</string>
    <string name="biologia">Biologia</string>
    <string name="fisica">Física</string>
    <string name="Sociologia">Sociologia</string>
</resources>
